<resources>
    <string name="app_name">Word Puzzle Game</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_study_words">StudyWordsActivity</string>
    <string name="english">English</string>
    <string name="amharic">Amharic</string>
    <string name="tigrigna">Tigrigna</string>
    <string name="next">Next</string>
    <string name="title_activity_add_language">AddLanguageActivity</string>
    <string name="title_activity_add_word">AddWordActivity</string>
    <string name="language_name">Language Name</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="grade">Grade</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="relation">Relation</string>
    <string name="mother">Mother</string>
    <string name="father">Father</string>
    <string name="see_results">See Results</string>
    <string name="game_over">Game Over</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="other">Other</string>
    <string name="a">A. </string>
    <string name="b">B. </string>
    <string name="c">C. </string>
    <string name="d">D. </string>

    <string-array name="grade">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="title_activity_kid_list">KidListActivity</string>
    <string name="no_account_for_kids">No Kids</string>
</resources>
