<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="5dp"
    android:layout_margin="2dp"
    app:cardBackgroundColor="@color/purpleLight"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<!---->
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
<!---->
            <ImageView
                android:id="@+id/iv_item_word"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_brightness_1_black_24dp" />
<!---->
            <TextView
                android:id="@+id/tv_item_word_english"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:textAlignment="center"
                app:layout_constraintStart_toEndOf="@id/iv_item_word"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_item_word_amharic"/>
<!---->
            <TextView
                android:id="@+id/tv_item_word_amharic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/amharic"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                app:layout_constraintStart_toEndOf="@id/iv_item_word"
                app:layout_constraintTop_toBottomOf="@id/tv_item_word_english"
                app:layout_constraintBottom_toTopOf="@id/tv_item_word_tigrigna"/>
<!---->
            <TextView
                android:id="@+id/tv_item_word_tigrigna"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/tigrigna"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_item_word"
                app:layout_constraintTop_toBottomOf="@id/tv_item_word_amharic" />
<!---->
        </android.support.constraint.ConstraintLayout>
<!---->
</android.support.v7.widget.CardView>